--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-b2-client = { version = "0.1.2", features = ["with_hyper"] }
+anyhow = "1.0"
 data-encoding = "2.3.2"
 error-chain = "0.12.4"
 ring = "0.16.20"
+sha1 = "0.10.1"
 uuid = { version = "0.8.2", features = ["v4"] }
+
+# AWS
+aws-config = "0.10.1"
+aws-sdk-s3 = "0.10.1"
+tokio = { version = "1", features = ["full"] }
+tokio-stream = "0.1.8"
