--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ anyhow = "1.0"
 data-encoding = "2.3.2"
 error-chain = "0.12.4"
 ring = "0.16.20"
+serde = { version = "1.0.136", features = ["derive"] }
+serde_json = "1.0.79"
 sha1 = "0.10.1"
 uuid = { version = "0.8.2", features = ["v4"] }
 
