--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,17 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
+chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
 data-encoding = "2.3.2"
 error-chain = "0.12.4"
+rand = "0.8.5"
 ring = "0.16.20"
+rust-argon2 = "1.0.0"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 sha1 = "0.10.1"
 uuid = { version = "0.8.2", features = ["v4"] }
+zeroize = "1.4.3"
 
 # AWS
 aws-config = "0.10.1"
