--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
+clap = { version = "3.1.12", features = ["derive"] }
 data-encoding = "2.3.2"
 error-chain = "0.12.4"
 rand = "0.8.5"
