--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ rust-argon2 = "1.0.0"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 sha1 = "0.10.1"
+url = "2.2.2"
 uuid = { version = "0.8.2", features = ["v4"] }
 zeroize = "1.4.3"
 
