--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0"
 chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
 clap = { version = "3.1.12", features = ["derive"] }
 data-encoding = "2.3.2"
+dialoguer = "0.10.0"
 error-chain = "0.12.4"
 rand = "0.8.5"
 ring = "0.16.20"
