--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ data-encoding = "2.3.2"
 dialoguer = "0.10.0"
 error-chain = "0.12.4"
 rand = "0.8.5"
+reqwest = "0.11.10"
 ring = "0.16.20"
 rust-argon2 = "1.0.0"
 serde = { version = "1.0.136", features = ["derive"] }
